<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_add"
        android:icon="@drawable/ic_action_plus"
        android:title="@string/menu_add"
        app:showAsAction="always" />
    <item android:id="@+id/action_delete"
        android:icon="@drawable/ic_action_trash"
        android:title="@string/menu_delete"
        app:showAsAction="always" />
    <item android:id="@+id/action_move"
        android:icon="@drawable/ic_action_move"
        android:title="@string/menu_move"
        app:showAsAction="always" />
    <item android:id="@+id/action_previous"
        android:icon="@drawable/ic_action_back"
        android:title="@string/menu_previous"
        app:showAsAction="always" />
    <item android:id="@+id/action_next"
        android:icon="@drawable/ic_action_forward"
        android:title="@string/menu_next"
        app:showAsAction="always" />
</menu>